# inventory-management

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.py  urls.py
inventory/: forms.py  models.py  services.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
inventory/templates/inventory/: product_confirm_delete.html  product_form.html  product_list.html
templates/: base.html
