[project]
name = "inventory-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-browser-reload>=1.21.0",
    "django-tailwind>=4.4.2",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
]
